# bookmark

./: .gitignore  README.md  pyproject.toml  setup.py
bookmark/: bookmark.py  cli.py
