[tool.poetry]
name = "bookmark-cli"
version = "0.0.4"
description = "command line for bookmark"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"
packages = [
    {include = "bookmark"}
]

[tool.poetry.scripts]
bm="bookmark.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
